Add feedback form submission
The form is sent using formspree.com to my work account.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,10 +6,11 @@ theme:
 
 
 docs_dir: docs
-# extra_css:
-#   - ../assets/custom.css  # Optional, if you want styling
-# extra_javascript:
-#   - ../assets/custom.js   # Optional JS
+extra_css:
+  - css/comment.css
+
+extra_javascript:
+  - js/comment.js
 
 
 plugins:
@@ -34,11 +35,11 @@ nav:
   - Chapter 04: 04/ch_04.md
   - Chapter 05: 05/ch_05.md
   - Chapter 06: 06/ch_06.md
-  - Chapter 07: 07/ch_07.md
+  #- Chapter 07: 07/ch_07.md
   - Chapter 08: 08/ch_08.md
-  - Chapter 09: 09/ch_09.md
-  - Chapter 10: 10/ch_10.md
-  - Chapter 11: 11/ch_11.md
+  #- Chapter 09: 09/ch_09.md
+  #- Chapter 10: 10/ch_10.md
+  #- Chapter 11: 11/ch_11.md
 
 # Include image assets
 markdown_extensions:
