--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,5 +13,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - run: pip install mkdocs mkdocs-material
+      - run: pip install -r requirements.txt
+      
+      - name: validate mkdocs config
+        run: mkdocs build --strict
+
       - run: mkdocs gh-deploy --force
+      
