--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - run: pip install -r requirements.txt
       
       - name: validate mkdocs config
-        run: mkdocs build --strict
+        run: mkdocs build
 
       - run: mkdocs gh-deploy --force
       
